# ai-by-hand

./: README.md
Week.1/Section.1.1/: Cargo.toml
Week.1/Section.1.1/src/: main.rs
Week.1/Section.1.1/src/share/: files.rs  mod.rs  plot.rs
Week.1/Section.1.2/: Cargo.toml  README.md
Week.1/Section.1.2/src/: main.rs
Week.1/Section.1.2/src/share/: mod.rs  plot.rs
Week.1/Section.1.3/: Cargo.toml
Week.1/Section.1.3/src/: main.rs
Week.1/Section.1.3/src/shared/: mod.rs
Week.1/Session.1.1/: Cargo.toml  README.md
Week.1/Session.1.1/src/: main.rs
Week.1/Session.1.1/src/share/: mod.rs  plot.rs
Week.1/Session.1.2/: Cargo.toml
Week.1/Session.1.2/src/: main.rs
Week.1/Session.1.2/src/share/: mod.rs  plot.rs
Week.1/Session.1.3/: Cargo.toml  README.md
Week.1/Session.1.3/src/: main.rs
Week.1/Session.1.3/src/shared/: mod.rs
