[package]
name = "ai-by-hand-w1s1"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
comfy-table = "7.1.4"
crossterm = "0.29.0"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
term_size = "0.3.2"
tui = { version = "0.19.0", features = ["crossterm"] }
charming_macros = "0.1.0"
charming = { version = "0.4.0", features = ["image", "ssr"] }
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
atty = "0.2.14"
base64 = "0.22.1"
