[package]
name = "ai-training-w1s2"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
base64 = "0.22.1"
charming = { version = "0.4.0", features = ["image", "ssr"] }
charming_macros = "0.1.0"
csv = "1.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
term_size = "0.3.2"
